# iso20022tester

./: .gitattributes  .gitignore  CLAUDE.md  README.md  config.yaml  pain001_generator_anforderungen.md  pyproject.toml  similar_repos_research.txt
docs/: SDD.md  SDD_v2.md  external_validation_guide.md  finaplo_integration.md  pacs008_implementation.md  xml_validation_services.md  xml_validator_integration.md
examples/: 20260320_160002_TC-CBPR-001_956b8c0c.xml  20260320_160002_TC-CBPR-002_702cdd20.xml  20260320_160002_TC-CBPR-003_6c6f7633.xml  20260320_160002_TC-IBAN-001_ccf3a171.xml  20260320_160002_TC-IBAN-002_0ef8c2d6.xml  20260320_160002_TC-QR-001_a013ac6e.xml  20260320_160002_TC-QR-002_8dcdcd03.xml  20260320_160002_TC-SEPA-001_c37459ee.xml  20260320_160002_TC-SEPA-002_47294739.xml  20260320_160002_TC-SEPA-003_757750a9.xml  20260320_192354_Group-BATCH-A_746f7891.xml  20260320_192354_Group-BATCH-B_68f45bce.xml  20260320_192354_TC-CBPR-001_956b8c0c.xml  20260320_192354_TC-CBPR-002_702cdd20.xml  20260320_192354_TC-CBPR-003_6c6f7633.xml  20260320_192354_TC-IBAN-001_ccf3a171.xml  20260320_192354_TC-IBAN-002_0ef8c2d6.xml  20260320_192354_TC-MULTI-001_82ec9f2d.xml  20260320_192354_TC-MULTI-002_aae65fc1.xml  20260320_192354_TC-MULTI-003_e1301617.xml  20260320_192354_TC-MULTI-004_99b49350.xml  20260320_192354_TC-MULTI-005_e15ca666.xml  20260320_192354_TC-MULTI-006_15ce6a66.xml  20260320_192354_TC-QR-001_a013ac6e.xml  20260320_192354_TC-QR-002_8dcdcd03.xml  20260320_192354_TC-SEPA-001_c37459ee.xml  20260320_192354_TC-SEPA-002_47294739.xml  (+294 more)
scripts/: validate_external.py  (+2 more)
(+307 files in other folders)
